2005-05-16 Stuart Prescott <s.prescott@unimelb.edu.au>
	* unborked email list action 
	* extended emai list form to allow a value separator to be specified 
	* re-enabled email list in adminmenu 

2005-05-15 Stuart Prescott <s.prescott@unimelb.edu.au>
	* joindata count num rows JIT update 

2005-05-15 Stuart Prescott <s.prescott@unimelb.edu.au>
	* implemented an out-of-band data mechanism to permit feedback from complex fields into the reportAction mechanism 

2005-05-13 Stuart Prescott <s.prescott@unimelb.edu.au>
	* CSS clean-ups, including splitting main CSS file for easier theming 

2005-05-13 Stuart Prescott <s.prescott@unimelb.edu.au>
	* enabled masquerading as another user for admin user and instrument admins 

2005-05-12 Stuart Prescott <s.prescott@unimelb.edu.au>
	* added a system(mysqldump) call to permit a backup of the entire database. 

2005-05-12 Stuart Prescott <s.prescott@unimelb.edu.au>
	* first cut at installing script 

2005-05-11 Stuart Prescott <s.prescott@unimelb.edu.au>
	* enabled comments from either booking or from timeslotrule to appear in calendar view 
	* many CSS changes to make more sense of calendar view 
	* some simple HTML changes to ensure every tr has a td within it (validator.w3.org) 

2005-05-11 Stuart Prescott <s.prescott@unimelb.edu.au>
	* foreach cleanups 
	* permit comments in timeslotrule pictures 

2005-05-10 Stuart Prescott <s.prescott@unimelb.edu.au>
	* enabled date ranges for deleted bookings and consumable usage views.  
	* included javascript +/- class to control a number of text fields 

2005-05-09 Stuart Prescott <s.prescott@unimelb.edu.au>
	* add an optional two-step sync algorithm for dbrow objects to facilitate join-table objects 

2005-05-09 Stuart Prescott <s.prescott@unimelb.edu.au>
	* admin can now view a list of deleted bookings for each instrument 

2005-05-09 Stuart Prescott <s.prescott@unimelb.edu.au>