@@ -6,6 +6,8 @@ CopyrightOwner = "The University of Melbourne"
 AdminEmail = "s.prescott@unimelb.edu.au"
 BasePath   = "/pfpc/bumblebee"
 BaseURL    = "/pfpc/bumblebee/index.php"
+; normally, not needed, but might be for some templates
+BaseRealPath = "/home/stuart/documents/CFCF/bumblebee/"
 
 [error_handling]
 ; set these to 0 for production systems, 1 for development/debugging
