@@ -3,6 +3,7 @@
 # Group object (extends dbo)
 
 include_once 'inc/formslib/dbrow.php';
+include_once 'inc/formslib/joinmatrix.php';
 include_once 'inc/formslib/textfield.php';
 
 class ClassCost extends DBRow {
@@ -13,6 +14,7 @@ class ClassCost extends DBRow {
     $this->use2StepSync = 1;
     $f = new IdField('id', 'UserClass ID');
     $f->editable = 0;
+    $f->duplicateName = 'userclass';
     $this->addElement($f);
     $f = new TextField('name', 'Name');
     $attrs = array('size' => '48');
@@ -21,30 +23,38 @@ class ClassCost extends DBRow {
     $f->isValidTest = 'is_nonempty_string';
     $this->addElement($f);
 
-    $f = new JoinData('costs',
-                       'userclass', $this->id,
-                       'classlabel', 'Cost settings');
-    $instrfield = new DropList('instrumentclass', 'Instrument Class');
-    $instrfield->connectDB('instrumentclass', array('id', 'name'));
-    $classexample = new ExampleEntries('id','instruments','class','name',3);
-    $classexample->separator = '; ';
-    $instrfield->setFormat('id', '%s', array('name'), ' (%40.40s)', $classexample);
-    $instrfield->editable=0;
-    $f->addElement($instrfield);
+    $f = new JoinMatrix('costs', 'id',
+                       'userclass',       'id', 'userclass',
+                       'instrumentclass', 'id', 'instrumentclass',
+                       'classlabel', 'Cost settings', 
+                       'Costs for each class of user corresponding to each instrument type');
+    $userfield  = new TextField('name', 'User Class', 'Classes of users');
+    $instrfield = new TextField('name', 'Instrument Class', 'Classes of instrument');
+    //$instrfield->setFormat('id', '%s', array('name'), ' (%40.40s)', $classexample);
+    $f->addKeys($userfield,$instrfield);
 
-    $f->addElement($instrfield);
-    $cost = new TextField('costfullday', 'Full day cost');
+    $cost = new TextField('costfullday', 'Full day cost', 
+                          'Cost of instrument use for a full day');
+    $attrs = array('size' => '6');
+    $cost->setAttr($attrs);
     $f->addElement($cost);
-    $halfs= new TextField('hourfactor', 'Hourly rate multiplier');
-    $f->addElement($halfs);
-    $hours= new TextField('halfdayfactor', 'Half-day rate multiplier');
+    $hours= new TextField('hourfactor', 'Hourly rate multiplier', 
+                          'Proportion of daily rate charged per hour');
+    $hours->setAttr($attrs);
     $f->addElement($hours);
-    $f->joinSetup('instrumentclass', array('minspare' => 0));
+    $halfs= new TextField('halfdayfactor', 'Half-day rate multiplier', 
+                          'Proportion of daily rate charged per half-day');
+    $halfs->setAttr($attrs);
+    $f->addElement($halfs);
     $f->colspan = 2;
+    $f->editable = 1;
+    //$f->joinSetup('instrumentclass', array('minspare' => 0));
+    $f->setKey($id);
     $this->addElement($f);
 
     $this->fill($id);
     $this->dumpheader = 'Cost object';
+    #preDump($this);
   }
 
   function display() {
