@@ -15,13 +15,15 @@ $dberrmsg = '<p>Sorry, I couldn\'t connect to the database, '
            .'the database subsystem.</p>'
            .'<p>If this persists, please contact the '
            .'<a href="mailto:'.$ADMINEMAIL.'">booking system administrator</a>.</p>';
-           
+
+$DB_CONNECT_DEBUG = 0;
+
 $connection = mysql_pconnect($CONFIG['database']['dbhost'], 
                              $CONFIG['database']['dbusername'], 
                              $CONFIG['database']['dbpasswd'])
-    or die ($dberrmsg);
+              or die ($dberrmsg.($DB_CONNECT_DEBUG ? mysql_error() : ''));
 $db = mysql_select_db($CONFIG['database']['dbname'], $connection)
-    or die($dberrmsg);
+              or die ($dberrmsg.($DB_CONNECT_DEBUG ? mysql_error() : ''));
 
 include_once 'inc/formslib/sql.php';
 
