@@ -1,7 +1,7 @@
 /* $Id$ */
 
 body {
-  background: #fafafa url("/images/nanobg.png");
+  background: #fafafa url("/theme/images/nanobg.png");
   background-repeat: repeat-y;
   background-position: right;
   font-family: "Bitstream Vera Sans", Verdana, Helvetica, Arial, sans-serif; 
