@@ -1,3 +1,12 @@
+2005-05-17 Stuart Prescott <s.prescott@unimelb.edu.au>
+	* create JoinMatrix class to handle data in one table that has coordinates (keys) from two tables 
+	* edit standard costs for instrument usage in matrix form 
+
+2005-05-16 Stuart Prescott <s.prescott@unimelb.edu.au>
+	* relaxed constraint requiring alphabetic username 
+	* permitted an admin-configurable regexp to test usernames 
+	* bugfix in auth error message return 
+
 2005-05-16 Stuart Prescott <s.prescott@unimelb.edu.au>
 	* unborked email list action 
 	* extended emai list form to allow a value separator to be specified 
